[package]
name = "send-arc"
version = "0.3.1"
edition = "2021"

description = "impl<T: Sync> Send for SendArc<T>"
keywords = ["no_std", "arc", "send", "local", "thread"]
categories = ["no-std"]

license = "MIT"
readme = "README.md"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
repository = "https://github.com/A4-Tacks/send-arc-rs"

[dependencies]
